improved blog-article

--- a/foundations/assignments/html-blog-article.html
+++ b/foundations/assignments/html-blog-article.html
@@ -7,14 +7,14 @@
     <body>
         <h1>My Blog</h1>
         <ul>
-            <li><h1>Heading 1</h1></li>
+            <li><h1>Standard Paragraph</h1></li>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
                 distinctio qui quos veritatis mollitia fugiat perspiciatis nobis
                 maxime aperiam nisi vel soluta amet, maiores et facere accusamus
                 porro esse optio.
             </p>
-            <li><h2>Heading 2</h2></li>
+            <li><h2>Bold (Strong)</h2></li>
             <p>
                 <strong
                     >Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -28,7 +28,7 @@
                     provident quis.</strong
                 >
             </p>
-            <li><h3>Heading 3</h3></li>
+            <li><h3>Italic (Emphasized)</h3></li>
             <p>
                 <em
                     >Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -37,9 +37,9 @@
                     officia ea ab veniam, dolor, voluptatibus sunt!</em
                 >
             </p>
-            <li><h4>Heading 4</h4></li>
+            <!-- <li><h4>Heading 4</h4></li>
             <li><h5>Heading 5</h5></li>
-            <li><h6>Heading 6</h6></li>
+            <li><h6>Heading 6</h6></li> -->
         </ul>
     </body>
 </html>
