Add recipe page content

--- a/foundations/odin-recipes/recipes/lasagna.html
+++ b/foundations/odin-recipes/recipes/lasagna.html
@@ -8,5 +8,36 @@
     <body>
         <a href="../index.html">Home</a>
         <h1>Lasagna</h1>
+        <img src="lasagna.jpg" alt="Lasagna" width="300" />
+        <h3>Description</h3>
+        <p>
+            Lasagna is a classic Italian dish featuring wide, flat pasta layered
+            with savory fillings and baked. Typically, it includes layers of
+            pasta interspersed with meat sauce (like <i>ragù</i>),
+            <i>béchamel</i> sauce, cheese (such as ricotta, mozzarella, and
+            Parmesan), and seasonings. The dish is often topped with grated
+            cheese that melts during baking, resulting in a rich, casserole-like
+            meal.
+        </p>
+        <h3>Ingredients</h3>
+        <p><ul>
+            <li>Meat</li>
+            <li>Onion and garlic</li>
+            <li>Tomato products</li>
+            <li>Sugar</li>
+            <li>Spices and seasonings</li>
+            <li>Lasagna noodles</li>
+            <li>Cheeses</li>
+            <li>Egg</li>
+        </ul></p>
+        <h3>Steps</h3>
+        <ol>
+            <li>Make the meat sauce.</li>
+            <li>Cook the noodles.</li>
+            <li>Make the ricotta mixture.</li>
+            <li>Layer the lasagna according to the recipe instructions.</li>
+            <li>Cover with foil and bake.</li>
+            <li>Let the lasagna rest before serving.</li>
+        </ol>
     </body>
 </html>
