Add more recipes

--- a/foundations/odin-recipes/index.html
+++ b/foundations/odin-recipes/index.html
@@ -7,6 +7,16 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Lasagna</a>
+        <ul>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li>
+                <a href="recipes/chicken-katsu-curry.html"
+                    >Chicken Katsu Curry</a
+                >
+            </li>
+            <li>
+                <a href="recipes/neapolitan-pizza.html">Neapolitan Pizza</a>
+            </li>
+        </ul>
     </body>
 </html>
