--- a/foundations/odin-recipes/recipes/chicken-katsu-curry.html
+++ b/foundations/odin-recipes/recipes/chicken-katsu-curry.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Chicken Katsu Curry Recipe</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <a href="../index.html">Home</a>
+        <a href="../index.html">- Back to Home</a>
         <h1>Chicken Katsu Curry</h1>
         <img
             src="chicken-katsu-curry.jpg"
