--- a/foundations/odin-recipes/recipes/lasagna.html
+++ b/foundations/odin-recipes/recipes/lasagna.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Lasagna Recipe</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <a href="../index.html">Home</a>
+        <a href="../index.html">- Back to Home</a>
         <h1>Lasagna</h1>
         <img src="lasagna.jpg" alt="Lasagna" width="300" />
         <h3>Description</h3>
