--- a/foundations/odin-recipes/recipes/neapolitan-pizza.html
+++ b/foundations/odin-recipes/recipes/neapolitan-pizza.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Neapolitan Pizza Recipe</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <a href="../index.html">Home</a>
+        <a href="../index.html">- Back to Home</a>
         <h1>Neapolitan Pizza</h1>
         <img src="neapolitan-pizza.jpg" alt="Neapolitan Pizza" width="400" />
         <h3>Description</h3>
