Finalize rev. 2 of recipes

--- a/foundations/odin-recipes/recipes/chicken-katsu-curry.html
+++ b/foundations/odin-recipes/recipes/chicken-katsu-curry.html
@@ -39,9 +39,9 @@
             <li>Coat each breast in egg, then press into the Panko.</li>
             <li>Fry the chicken katsu until golden brown.</li>
         </ol>
-        <p>
+        <div>
             (Yes, I know I used Chicken Katsu Recipe instead of curry. It was
             too freaking lengthy.)
-        </p>
+        </div>
     </body>
 </html>
