Add dark mode meta for screen readers

--- a/foundations/odin-recipes/recipes/lasagna.html
+++ b/foundations/odin-recipes/recipes/lasagna.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Lasagna Recipe</title>
         <link rel="stylesheet" href="style.css">
+        <meta name="color-scheme" content="dark only">
     </head>
     <body>
         <a href="../index.html">- Back to Home</a>
