Add image and list inline

--- a/foundations/odin-recipes/recipes/chicken-katsu-curry.html
+++ b/foundations/odin-recipes/recipes/chicken-katsu-curry.html
@@ -15,6 +15,17 @@
             alt="Chicken Katsu Curry"
             width="300"
         />
+        <div class="ingredients">
+            <h3>Ingredients</h3>
+            <ul>
+                <li>Chicken</li>
+                <li>Seasonings</li>
+                <li>Flour</li>
+                <li>Egg</li>
+                <li>Panko</li>
+                <li>Oil</li>
+            </ul>
+        </div>
         <h3>Description</h3>
         <p>
             Chicken katsu curry is a popular Japanese dish featuring crispy,
@@ -25,24 +36,15 @@
             the textures of crispy fried chicken with the aromatic and mildly
             spiced Japanese curry.
         </p>
-        <h3>Ingredients</h3>
-        <ul>
-            <li>Chicken</li>
-            <li>Seasonings</li>
-            <li>Flour</li>
-            <li>Egg</li>
-            <li>Panko</li>
-            <li>Oil</li>
-        </ul>
         <h3>Steps</h3>
         <ol>
             <li>Season the chicken, then dredge in flour.</li>
             <li>Coat each breast in egg, then press into the Panko.</li>
             <li>Fry the chicken katsu until golden brown.</li>
         </ol>
-        <div>
+        <span class="bottom-text">
             (Yes, I know I used Chicken Katsu Recipe instead of curry. It was
             too freaking lengthy.)
-        </div>
+        </span>
     </body>
 </html>
