--- a/foundations/odin-recipes/recipes/neapolitan-pizza.html
+++ b/foundations/odin-recipes/recipes/neapolitan-pizza.html
@@ -10,7 +10,20 @@
     <body>
         <a href="../index.html">- Back to Home</a>
         <h1>Neapolitan Pizza</h1>
-        <img src="neapolitan-pizza.jpg" alt="Neapolitan Pizza" width="400" />
+        <img src="neapolitan-pizza.jpg" alt="Neapolitan Pizza" width="300" />
+        <div class="ingredients">
+            <h3>Ingredients</h3>
+            <ul>
+                <li>600 ml water</li>
+                <li>1 kg Flour Le 5 Stagioni Pizza Napoletana brand, 35 oz</li>
+                <li>30 g Salt, 1 oz</li>
+                <li>1 gram Dry yeast</li>
+                <li>Tomato Sauce</li>
+                <li>Fresh Mozzarella</li>
+                <li>Fresh Basil Leaves</li>
+                <li>Extra Virgin Olive Oil</li>
+            </ul>
+        </div>
         <h3>Description</h3>
         <p>
             Neapolitan pizza is a type of pizza that originated in Naples,
@@ -21,14 +34,6 @@
             ingredients like San Marzano tomatoes, fresh mozzarella (buffalo or
             fior di latte), and basil.
         </p>
-        <h3>Ingredients</h3>
-        <ul>
-            <li>600 ml water</li>
-            <li>1 kg Flour Le 5 Stagioni Pizza Napoletana brand, 35 oz</li>
-            <li>30 g Salt, 1 oz</li>
-            <li>1 gram Dry yeast</li>
-            <li>Pizza Toppings</li>
-        </ul>
         <h3>Steps</h3>
         <ol>
             <li>
