--- a/foundations/odin-recipes/recipes/lasagna.html
+++ b/foundations/odin-recipes/recipes/lasagna.html
@@ -11,16 +11,7 @@
         <a href="../index.html">- Back to Home</a>
         <h1>Lasagna</h1>
         <img src="lasagna.jpg" alt="Lasagna" width="300" />
-        <h3>Description</h3>
-        <p>
-            Lasagna is a classic Italian dish featuring wide, flat pasta layered
-            with savory fillings and baked. Typically, it includes layers of
-            pasta interspersed with meat sauce (like <i>ragù</i>),
-            <i>béchamel</i> sauce, cheese (such as ricotta, mozzarella, and
-            Parmesan), and seasonings. The dish is often topped with grated
-            cheese that melts during baking, resulting in a rich, casserole-like
-            meal.
-        </p>
+        <div class="ingredients">
         <h3>Ingredients</h3>
         <ul>
             <li>Meat</li>
@@ -32,6 +23,17 @@
             <li>Cheeses</li>
             <li>Egg</li>
         </ul>
+        </div>
+        <h3>Description</h3>
+        <p>
+            Lasagna is a classic Italian dish featuring wide, flat pasta layered
+            with savory fillings and baked. Typically, it includes layers of
+            pasta interspersed with meat sauce (like <i>ragù</i>),
+            <i>béchamel</i> sauce, cheese (such as ricotta, mozzarella, and
+            Parmesan), and seasonings. The dish is often topped with grated
+            cheese that melts during baking, resulting in a rich, casserole-like
+            meal.
+        </p>
         <h3>Steps</h3>
         <ol>
             <li>Make the meat sauce.</li>
