--- a/foundations/odin-recipes/index.html
+++ b/foundations/odin-recipes/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <div class="container">
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
             <li>
@@ -20,5 +21,6 @@
                 <a href="recipes/neapolitan-pizza.html">Neapolitan Pizza</a>
             </li>
         </ul>
+        </div>
     </body>
 </html>
