--- a/foundations/assignments/css/flexbox/index.html
+++ b/foundations/assignments/css/flexbox/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset='UTF-8'/>
     <title>Some Web Page</title>
-    <link rel='stylesheet' href='styles.css'/>
+    <link rel='stylesheet' href='style.css'/>
   </head>
   <body>
     <div class='menu-container'>
       <div class='menu'>
-        <div class='date'>Aug 14, 2016</div>
+        <div class='date'>July 29, 2025</div>
         <div class='signup'>Sign Up</div>
         <div class='login'>Login</div>
       </div>
