--- a/foundations/assignments/css/flexbox/index.html
+++ b/foundations/assignments/css/flexbox/index.html
@@ -36,7 +36,7 @@
             <div class="photo-grid-item">
                 <img src="images/four.svg">
             </div>
-            <div class="photo-grid-item">
+            <div class="photo-grid-item last-item">
                 <img src="images/five.svg">
             </div>
         </div>
