--- a/foundations/landing-page/index.html
+++ b/foundations/landing-page/index.html
@@ -5,5 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Landing Page (conquered by cats)</title>
     </head>
-    <body></body>
+    <body>
+        <header>
+            <div class="logo">Header Logo</div>
+            <div class="links">
+                <ul>
+                    <li><a href="">header link one</a></li>
+                    <li><a href="">header link two</a></li>
+                    <li><a href="">header link three</a></li>
+                </ul>
+            </div>
+        </header>
+    </body>
 </html>
