--- a/foundations/landing-page/index.html
+++ b/foundations/landing-page/index.html
@@ -16,5 +16,18 @@
                 </ul>
             </div>
         </header>
+        <div class="hero">
+            <div class="hero-main">
+                <div class="hero-title">This website is awesome</div>
+                <div class="hero-desc">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Deserunt consequatur error perspiciatis suscipit eaque
+                    laboriosam hic fugit. Tenetur numquam corporis assumenda
+                    nobis earum, sunt nulla odit hic, rem cumque quia!
+                </div>
+                <button>Sign up</button>
+            </div>
+            <div class="hero-image"></div>
+        </div>
     </body>
 </html>
