Add info section

--- a/foundations/landing-page/index.html
+++ b/foundations/landing-page/index.html
@@ -29,5 +29,14 @@
             </div>
             <div class="hero-image"></div>
         </div>
+        <div class="info">
+            <div class="info-title">Some random information.</div>
+            <div class="info-container">
+                <div class="info-box"></div>
+                <div class="info-box"></div>
+                <div class="info-box"></div>
+                <div class="info-box"></div>
+            </div>
+        </div>
     </body>
 </html>
