Add quote section

--- a/foundations/landing-page/index.html
+++ b/foundations/landing-page/index.html
@@ -38,5 +38,14 @@
                 <div class="info-box"></div>
             </div>
         </div>
+        <div class="quote">
+            <div class="quote-main">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim
+                fuga officia distinctio commodi, dignissimos nam adipisci
+                voluptatibus excepturi, ipsum, perferendis similique temporibus
+                alias doloremque a placeat deleniti! Officia, voluptatum ipsa.
+            </div>
+            <div class="quote-author">- Garfield</div>
+        </div>
     </body>
 </html>
