Add sign up section

--- a/foundations/landing-page/index.html
+++ b/foundations/landing-page/index.html
@@ -47,5 +47,22 @@
             </div>
             <div class="quote-author">- Garfield</div>
         </div>
+        <div class="sign-up">
+            <div class="sign-up-container">
+                <div class="sign-up-main">
+                    <div class="sign-up-title">Sign up stuff!</div>
+                    <div class="sign-up-desc">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Neque dolore obcaecati iste illum sint, porro
+                        omnis enim incidunt dolor vel explicabo voluptas harum
+                        corrupti? Aliquid praesentium placeat distinctio dicta
+                        provident?
+                    </div>
+                </div>
+                <div class="sign-up-button">
+                    <button>Sign up</button>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
