--- a/foundations/landing-page/index.html
+++ b/foundations/landing-page/index.html
@@ -28,7 +28,9 @@
                 </div>
                 <button>Sign up</button>
             </div>
-            <div class="hero-image"></div>
+            <div class="hero-image">
+                <img src="" alt="Placeholder" width="900px" height="1600px" />
+            </div>
         </div>
         <div class="info">
             <div class="info-title">Some random information.</div>
