Finish hero styling

--- a/foundations/landing-page/index.html
+++ b/foundations/landing-page/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <div class="logo">Header Logo</div>
+            <div class="logo">Landing Page</div>
             <div class="links">
                 <ul>
                     <li><a href="">header link one</a></li>
@@ -19,17 +19,22 @@
         </header>
         <div class="hero">
             <div class="hero-main">
-                <div class="hero-title">This website is awesome</div>
+                <div class="hero-title">This website is pawesome</div>
                 <div class="hero-desc">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Deserunt consequatur error perspiciatis suscipit eaque
-                    laboriosam hic fugit. Tenetur numquam corporis assumenda
-                    nobis earum, sunt nulla odit hic, rem cumque quia!
+                    Do not let this title distract you from the fact that this
+                    creature on the right is wanted in 27 states for world
+                    domination, and almost succeeding.
                 </div>
-                <button>Sign up</button>
+                <a href="https://tips.fbi.gov/home">
+                    <button>Report if seen</button>
+                </a>
             </div>
             <div class="hero-image">
-                <img src="" alt="Placeholder" width="900px" height="1600px" />
+                <img
+                    src="output-onlinegiftools.gif"
+                    alt="Placeholder"
+                    width="500px"
+                />
             </div>
         </div>
         <div class="info">
