--- a/foundations/landing-page/index.html
+++ b/foundations/landing-page/index.html
@@ -31,8 +31,8 @@
             </div>
             <div class="hero-image">
                 <img
-                    src="output-onlinegiftools.gif"
-                    alt="Placeholder"
+                    src="assets/cat-flashbang.gif"
+                    alt="Cat gets flashbanged"
                     width="500px"
                 />
             </div>
