Add span for wanted text

--- a/foundations/landing-page/index.html
+++ b/foundations/landing-page/index.html
@@ -22,8 +22,8 @@
                 <div class="hero-title">This website is pawesome</div>
                 <div class="hero-desc">
                     Do not let this title distract you from the fact that this
-                    creature on the right is wanted in 27 states for world
-                    domination, and almost succeeding.
+                    creature on the right is <span>wanted</span> in 27 states
+                    for world domination, and almost succeeding.
                 </div>
                 <a href="https://tips.fbi.gov/home">
                     <button>Report if seen</button>
