Add suspects images

--- a/foundations/landing-page/index.html
+++ b/foundations/landing-page/index.html
@@ -38,12 +38,32 @@
             </div>
         </div>
         <div class="info">
-            <div class="info-title">Some random information.</div>
+            <div class="info-title">Some other suspects</div>
             <div class="info-container">
-                <div class="info-box"></div>
-                <div class="info-box"></div>
-                <div class="info-box"></div>
-                <div class="info-box"></div>
+                <div class="info-box">
+                    <img
+                        src="assets/cat-wizard.jpg"
+                        alt="A fat-ass cat with a wizard hat"
+                    />
+                </div>
+                <div class="info-box">
+                    <img
+                        src="assets/cat-nuke.jpg"
+                        alt="A cat with explosion behind it"
+                    />
+                </div>
+                <div class="info-box">
+                    <img
+                        src="assets/cat-gaming.jpg"
+                        alt="A cat playing counter-strike"
+                    />
+                </div>
+                <div class="info-box">
+                    <img
+                        src="assets/cat-mugshot.jpg"
+                        alt="A cat with a mugshot"
+                    />
+                </div>
             </div>
         </div>
         <div class="quote">
