Add suspects description

--- a/foundations/landing-page/index.html
+++ b/foundations/landing-page/index.html
@@ -45,24 +45,40 @@
                         src="assets/cat-wizard.jpg"
                         alt="A fat-ass cat with a wizard hat"
                     />
+                    <p>
+                        Arrested for casting disarming spells that removed
+                        trousers instead of wands.
+                    </p>
                 </div>
                 <div class="info-box">
                     <img
                         src="assets/cat-nuke.jpg"
                         alt="A cat with explosion behind it"
                     />
+                    <p>
+                        Arrested for turning a small dog food shop into a
+                        fully-functioning volcano.
+                    </p>
                 </div>
                 <div class="info-box">
                     <img
                         src="assets/cat-gaming.jpg"
                         alt="A cat playing counter-strike"
                     />
+                    <p>
+                        Arrested for rage hacking and saying racial purrs in an
+                        online video game.
+                    </p>
                 </div>
                 <div class="info-box">
                     <img
                         src="assets/cat-mugshot.jpg"
                         alt="A cat with a mugshot"
                     />
+                    <p>
+                        Arrested for 200 "Accidental" Shootings and when
+                        questioned, his excuse was always "mistaken for a deer".
+                    </p>
                 </div>
             </div>
         </div>
