Fix hidden text because of overflow

--- a/foundations/landing-page/index.html
+++ b/foundations/landing-page/index.html
@@ -41,44 +41,61 @@
             <div class="info-title">Some other suspects</div>
             <div class="info-container">
                 <div class="info-box">
-                    <img
-                        src="assets/cat-wizard.jpg"
-                        alt="A fat-ass cat with a wizard hat"
-                    />
-                    <p>
-                        Arrested for casting disarming spells that removed
-                        trousers instead of wands.
-                    </p>
+                    <div class="info-img">
+                        <img
+                            src="assets/cat-wizard.jpg"
+                            alt="A fat-ass cat with a wizard hat"
+                        />
+                    </div>
+                    <div class="img-desc">
+                        <p>
+                            Arrested for casting disarming spells that removed
+                            trousers instead of wands.
+                        </p>
+                    </div>
                 </div>
                 <div class="info-box">
-                    <img
-                        src="assets/cat-nuke.jpg"
-                        alt="A cat with explosion behind it"
-                    />
-                    <p>
-                        Arrested for turning a small dog food shop into a
-                        fully-functioning volcano.
-                    </p>
+                    <div class="info-img">
+                        <img
+                            src="assets/cat-nuke.jpg"
+                            alt="A cat with explosion behind it"
+                        />
+                    </div>
+                    <div class="img-desc">
+                        <p>
+                            Arrested for turning a small dog food shop into a
+                            fully-functioning volcano.
+                        </p>
+                    </div>
                 </div>
                 <div class="info-box">
-                    <img
-                        src="assets/cat-gaming.jpg"
-                        alt="A cat playing counter-strike"
-                    />
-                    <p>
-                        Arrested for rage hacking and saying racial purrs in an
-                        online video game.
-                    </p>
+                    <div class="info-img">
+                        <img
+                            src="assets/cat-gaming.jpg"
+                            alt="A cat playing counter-strike"
+                        />
+                    </div>
+                    <div class="img-desc">
+                        <p>
+                            Arrested for rage hacking and saying racial purrs in
+                            an online video game.
+                        </p>
+                    </div>
                 </div>
                 <div class="info-box">
-                    <img
-                        src="assets/cat-mugshot.jpg"
-                        alt="A cat with a mugshot"
-                    />
-                    <p>
-                        Arrested for 200 "Accidental" Shootings and when
-                        questioned, his excuse was always "mistaken for a deer".
-                    </p>
+                    <div class="info-img">
+                        <img
+                            src="assets/cat-mugshot.jpg"
+                            alt="A cat with a mugshot"
+                        />
+                    </div>
+                    <div class="img-desc">
+                        <p>
+                            Arrested for 200 "Accidental" Shootings and when
+                            questioned, his excuse was always "mistaken for a
+                            deer".
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
