Adjusted info section

--- a/foundations/landing-page/index.html
+++ b/foundations/landing-page/index.html
@@ -91,9 +91,9 @@
                     </div>
                     <div class="img-desc">
                         <p>
-                            Arrested for 200 "Accidental" Shootings and when
+                            Arrested for 200 "accidental" shootings and when
                             questioned, his excuse was always "mistaken for a
-                            deer".
+                            deer"
                         </p>
                     </div>
                 </div>
