Add quote section styling

--- a/foundations/landing-page/index.html
+++ b/foundations/landing-page/index.html
@@ -101,12 +101,20 @@
         </div>
         <div class="quote">
             <div class="quote-main">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim
-                fuga officia distinctio commodi, dignissimos nam adipisci
-                voluptatibus excepturi, ipsum, perferendis similique temporibus
-                alias doloremque a placeat deleniti! Officia, voluptatum ipsa.
+                <p>
+                    <em>
+                        "You know, I firmly believe that the world would be a
+                        much better place if every problem could be solved with
+                        a big steaming plate of lasagna. Feeling down? Lasagna.
+                        Got a deadline? Lasagna. Monday? Yes, lasagna. If loving
+                        lasagna is wrong, I don’t want to be right — now pass
+                        the lasagna, Jon!"
+                    </em>
+                </p>
             </div>
-            <div class="quote-author">- Garfield</div>
+            <div class="quote-author">
+                - Garfield, Devourer of Souls and Lasagna
+            </div>
         </div>
         <div class="sign-up">
             <div class="sign-up-container">
