Finish quote section styling

--- a/foundations/landing-page/index.html
+++ b/foundations/landing-page/index.html
@@ -100,20 +100,22 @@
             </div>
         </div>
         <div class="quote">
-            <div class="quote-main">
-                <p>
-                    <em>
-                        "You know, I firmly believe that the world would be a
-                        much better place if every problem could be solved with
-                        a big steaming plate of lasagna. Feeling down? Lasagna.
-                        Got a deadline? Lasagna. Monday? Yes, lasagna. If loving
-                        lasagna is wrong, I don’t want to be right — now pass
-                        the lasagna, Jon!"
-                    </em>
-                </p>
-            </div>
-            <div class="quote-author">
-                - Garfield, Devourer of Souls and Lasagna
+            <div class="quote-container">
+                <div class="quote-main">
+                    <p>
+                        <em>
+                            "You know, I firmly believe that the world would be
+                            a much better place if every problem could be solved
+                            with a big steaming plate of lasagna. Feeling down?
+                            Lasagna. Got a deadline? Lasagna. Monday? Yes,
+                            lasagna. If loving lasagna is wrong, I don’t want to
+                            be right — now pass the lasagna, Jon!"
+                        </em>
+                    </p>
+                </div>
+                <div class="quote-author">
+                    - Garfield, Devourer of Souls and Lasagna
+                </div>
             </div>
         </div>
         <div class="sign-up">
