--- a/foundations/landing-page/index.html
+++ b/foundations/landing-page/index.html
@@ -121,17 +121,17 @@
         <div class="sign-up">
             <div class="sign-up-container">
                 <div class="sign-up-main">
-                    <div class="sign-up-title">Sign up stuff!</div>
+                    <div class="sign-up-title">Report suspicious activity!</div>
                     <div class="sign-up-desc">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing
-                        elit. Neque dolore obcaecati iste illum sint, porro
-                        omnis enim incidunt dolor vel explicabo voluptas harum
-                        corrupti? Aliquid praesentium placeat distinctio dicta
-                        provident?
+                        If you witness any suspicious feline activity, contact
+                        us! <strong>DO NOT</strong> attempt to apprehend the
+                        suspect yourself.
                     </div>
                 </div>
                 <div class="sign-up-button">
-                    <button>Sign up</button>
+                    <a href="https://tips.fbi.gov/home">
+                        <button>Report</button>
+                    </a>
                 </div>
             </div>
         </div>
