Add footer styling

--- a/foundations/landing-page/index.html
+++ b/foundations/landing-page/index.html
@@ -135,6 +135,6 @@
                 </div>
             </div>
         </div>
-        <footer>Copyright</footer>
+        <footer>Copyright © The Paw-lice department</footer>
     </body>
 </html>
