Change logo branding

--- a/foundations/landing-page/index.html
+++ b/foundations/landing-page/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <div class="logo">Landing Page</div>
+            <div class="logo">The Paw-lice Department</div>
             <div class="links">
                 <ul>
                     <li><a href="">header link one</a></li>
