Add links to header

--- a/foundations/landing-page/index.html
+++ b/foundations/landing-page/index.html
@@ -11,9 +11,21 @@
             <div class="logo">The Paw-lice Department</div>
             <div class="links">
                 <ul>
-                    <li><a href="">header link one</a></li>
-                    <li><a href="">header link two</a></li>
-                    <li><a href="">header link three</a></li>
+                    <li>
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+                            >free robux</a
+                        >
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+                            >free vbucks</a
+                        >
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+                            >free minecoins</a
+                        >
+                    </li>
                 </ul>
             </div>
         </header>
