--- a/foundations/landing-page/index.html
+++ b/foundations/landing-page/index.html
@@ -147,6 +147,6 @@
                 </div>
             </div>
         </div>
-        <footer>Copyright © The Paw-lice department</footer>
+        <footer>Copyright © The Paw-lice Department</footer>
     </body>
 </html>
